config/simple_flask_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask-svc
spec:
  ports:
    - name: http
      port: 5001
      targetPort: http
  selector:
    app: simple-flask
