config/simple_nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-svc
spec:
  ports:
  - name: http
    port: 81
    targetPort: http
  selector:
    app: simple-nginx
