config/simple_nginx_svc_headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-svc-headless
spec:
  clusterIP: None
  ports:
    - name: http
      port: 83
      targetPort: http
  selector:
    app: simple-nginx
