config/simple_nginx_svc_np.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-svc-np
spec:
  type: NodePort
  ports:
  - name: http
    port: 82
    targetPort: http
    nodePort: 30123
  selector:
    app: simple-nginx
