config/simple_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
    - host: simple-nginx.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: simple-nginx-svc
              servicePort: 81
    - host: simple-flask.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: simple-flask-svc
              servicePort: 5001
